work with unit tests

--- a/arbor/include/CMakeLists.txt
+++ b/arbor/include/CMakeLists.txt
@@ -43,10 +43,16 @@ if(ARB_WITH_PROFILING)
     list(APPEND arb_features PROFILE)
 endif()
 
+set(arb_constants)  
+if(ARB_PREFETCH_SIZE)
+  list(APPEND arb_constants PREFETCH_SIZE:${ARB_PREFETCH_SIZE})
+endif()
+
 add_custom_command(
     OUTPUT version.hpp-test
     DEPENDS _always_rebuild
     COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/git-source-id ${FULL_VERSION_STRING} ${arb_features} > version.hpp-test
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/git-source-id-constants ${arb_constants}  >> version.hpp-test
 )
 
 set(version_hpp_path arbor/version.hpp)
