--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -14,6 +14,7 @@ set(test_mechanisms
     test1_kin_compartment
     test2_kin_diff
     test3_kin_diff
+    test4_kin_compartment
     test1_kin_steadystate
     fixed_ica_current
     point_ica_current
