--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -28,11 +28,13 @@ set(arbor_sources
     mechcat.cpp
     memory/cuda_wrappers.cpp
     memory/util.cpp
-    morph/em_morphology.cpp
+    morph/embed_pwlin1d.cpp
     morph/label_dict.cpp
     morph/locset.cpp
     morph/mbranch.cpp
+    morph/morphexcept.cpp
     morph/morphology.cpp
+    morph/mprovider.cpp
     morph/primitives.cpp
     morph/region.cpp
     morph/sample_tree.cpp
