Address PR comments
* Rename embed_pwlin1d to embed_pwlin.
* Use delegating constructors in mprovder class.
* Add comments outlining logic for mprovider::init().
* Add comments to help explain embed_pwlin data, integration.
* Add missing ixa entry for zero-length branches (should they ever exist) in embed_pwlin_data.

--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -28,7 +28,7 @@ set(arbor_sources
     mechcat.cpp
     memory/cuda_wrappers.cpp
     memory/util.cpp
-    morph/embed_pwlin1d.cpp
+    morph/embed_pwlin.cpp
     morph/label_dict.cpp
     morph/locset.cpp
     morph/mbranch.cpp
