--- a/python/test/cpp/CMakeLists.txt
+++ b/python/test/cpp/CMakeLists.txt
@@ -9,8 +9,19 @@ add_executable(py_unit EXCLUDE_FROM_ALL ${py_unit_sources})
 add_dependencies(tests py_unit)
 
 add_library(py_unit_lib $<TARGET_OBJECTS:pyarb_obj>)
+target_link_libraries(py_unit_lib PRIVATE arbor pybind11::module)
 
 target_compile_options(py_unit PRIVATE ${ARB_CXXOPT_ARCH})
-target_include_directories(py_unit PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
-target_include_directories(py_unit PRIVATE "${PROJECT_SOURCE_DIR}/python")
-target_link_libraries(py_unit PRIVATE gtest arbor arbor-private-headers arbor-sup py_unit_lib)
+target_include_directories(
+    py_unit PRIVATE
+    "${CMAKE_CURRENT_BINARY_DIR}"
+    "${PROJECT_SOURCE_DIR}/python"
+)
+
+target_link_libraries(
+    py_unit PRIVATE
+    gtest
+    arbor
+    py_unit_lib
+    pybind11::module
+)
