--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -8,6 +8,12 @@ target_include_directories(ext-json INTERFACE json/single_include)
 add_library(ext-tclap INTERFACE)
 target_include_directories(ext-tclap INTERFACE tclap/include)
 
+# Random123 (DE Shaw Research) counter-based random number generators (header-only)
+
+add_library(ext-random123 INTERFACE)
+target_include_directories(ext-random123 INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/random123/include)
+install(TARGETS ext-random123 EXPORT arbor-targets)
+
 # Google benchmark for microbenchmarks:
 
 check_git_submodule(gbench google-benchmark)
