--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -80,9 +80,9 @@ set(unit_sources
     test_algorithms.cpp
     test_any.cpp
     test_backend.cpp
-    test_cable_cell.cpp
-    test_compartments.cpp
     test_counter.cpp
+    test_cv_geom.cpp
+    test_cv_layout.cpp
     test_cv_policy.cpp
     test_cycle.cpp
     test_domain_decomposition.cpp
@@ -127,7 +127,6 @@ set(unit_sources
     test_probe.cpp
     test_range.cpp
     test_ratelem.cpp
-    test_segment.cpp
     test_schedule.cpp
     test_spike_source.cpp
     test_scope_exit.cpp
