address PR comments pt 3

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -1,7 +1,12 @@
 include(BuildModules.cmake)
 
 # The list of library-provided mechanisms used to populate the default catalogue:
-set(mechanisms pas hh expsyn exp2syn nernst test_kin1 test_kinlva test_ca nax kdrmt kamt)
+set(mechanisms pas hh expsyn exp2syn nernst test_kin1 test_kinlva test_ca nax kdrmt kamt
+    Cav2_1 Cav3_1 Cav3_2 Cav3_3
+    Kca1_1 Kca2_2 Kca3_1
+    Kv1_1 Kv1_5 Kv3_3 Kv3_4 Kv4_3
+    HCN1 Kir2_3 Leak Nav1_6 cdp5
+    )
 
 set(mod_srcdir "${CMAKE_CURRENT_SOURCE_DIR}/mod")
 
