--- a/test/ubench/CMakeLists.txt
+++ b/test/ubench/CMakeLists.txt
@@ -7,6 +7,7 @@ set(bench_sources
     default_construct.cpp
     event_setup.cpp
     event_binning.cpp
+    fvm_discretize.cpp
     #    mech_vec.cpp --- requires rework for new API.
     task_system.cpp
 )
@@ -26,6 +27,7 @@ foreach(bench_src ${bench_sources})
 
     target_link_libraries(${bench_exe} arbor arbor-private-headers ext-benchmark)
     target_compile_options(${bench_exe} PRIVATE ${ARB_CXXOPT_ARCH})
+    target_compile_definitions(${bench_exe} PRIVATE "-DDATADIR=\"${CMAKE_CURRENT_SOURCE_DIR}/swc\"")
     list(APPEND bench_exe_list ${bench_exe})
 endforeach()
 
