update travis build scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 ######## Testing minimal compiler requirements ########
 # GCC          6.4.0
-# Clang        4.0
+# Clang        7.0
 # Apple Clang  900.0.39.2
 # Python       3.6
 #######################################################
@@ -14,10 +14,10 @@ matrix:
 ## test gcc6 - single node/rank with threading backend ##
   - name: "osx, gcc, serial, py"
     os: osx
-    osx_image: xcode9.2
+    osx_image: xcode11.3
     python: 3.6
     env:
-      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
+      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && brew install cmake && CC=gcc-6 && CXX=g++-6"
       - BUILD_NAME=cthread-osx-gcc-py
       - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3
     compiler: gcc-6
@@ -25,10 +25,10 @@ matrix:
 ## test gcc6 - mpi with threading backend ##
   - name: "osx, gcc, mpi, py"
     os: osx
-    osx_image: xcode9.2
+    osx_image: xcode11.3
     python: 3.6
     env:
-      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
+      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && brew install cmake && CC=gcc-6 && CXX=g++-6"
       - BUILD_NAME=mpi-osx-gcc-py
       - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3
     compiler: gcc-6
@@ -36,7 +36,7 @@ matrix:
 ## test clang9 - single node/rank with threading backend ##
   - name: "osx, apple clang, serial, py"
     os: osx
-    osx_image: xcode9.2
+    osx_image: xcode11.3
     python: 3.6
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
@@ -47,7 +47,7 @@ matrix:
 ## test clang9 - mpi with threading backend ##
   - name: "osx, apple clang, mpi, py"
     os: osx
-    osx_image: xcode9.2
+    osx_image: xcode11.3
     python: 3.6
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
@@ -59,7 +59,7 @@ matrix:
 ## test gcc6 - single node/rank with threading backend ##
   - name: "linux, gcc, serial, py"
     os: linux
-    dist: trusty
+    dist: bionic
     python: 3.6
     addons:
       apt:
@@ -78,7 +78,7 @@ matrix:
 ## test gcc6 - mpi with threading backend ##
   - name: "linux, gcc, mpi, py"
     os: linux
-    dist: trusty
+    dist: bionic
     python: 3.6
     addons:
       apt:
@@ -97,20 +97,17 @@ matrix:
 ## test clang4 - single node/rank with threading backend ##
   - name: "linux, clang, serial, py"
     os: linux
-    dist: trusty
+    dist: bionic
     python: 3.6
     addons:
       apt:
         sources:
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-4.0
         packages:
-          - clang-4.0
-          - g++-6
           - openmpi-bin
           - libopenmpi-dev
     env:
-      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+      - MATRIX_EVAL="CC=clang && CXX=clang++"
       - BUILD_NAME=cthread-linux-clang-py
       - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3
     compiler: clang-4.0
@@ -118,20 +115,17 @@ matrix:
 ## test clang4 - mpi with threading backend ##
   - name: "linux, clang, mpi, py"
     os: linux
-    dist: trusty
+    dist: bionic
     python: 3.6
     addons:
       apt:
         sources:
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-4.0
         packages:
-          - clang-4.0
-          - g++-6
           - openmpi-bin
           - libopenmpi-dev
     env:
-      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+      - MATRIX_EVAL="CC=clang && CXX=clang++"
       - BUILD_NAME=mpi-linux-clang-py
       - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3
     compiler: clang-4.0
