finesse module installation, and add documentation

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -49,10 +49,10 @@ add_library(pyarb MODULE $<TARGET_OBJECTS:pyarb_obj>)
 # The output name of the pyarb .so file is "_arbor"
 set_target_properties(pyarb PROPERTIES OUTPUT_NAME _arbor)
 # With this, the full name of the library will be something like:
-#   arbor.cpython-37m-x86_64-linux-gnu.so
+#   arbor.cpython-36m-x86_64-linux-gnu.so
 set_target_properties(pyarb PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}" SUFFIX "${PYTHON_MODULE_EXTENSION}")
 
-# this dependency has to be spelt out again, despite being added to
+# This dependency has to be spelt out again, despite being added to
 # pyarb_obj because CMake.
 target_link_libraries(pyarb PRIVATE arbor pybind11::module)
 
@@ -68,21 +68,18 @@ endif()
 # For unit tests on C++ side of Python wrappers
 add_subdirectory(test)
 
-# Determine the installation path, according to the Python version.
-find_package(PythonInterp REQUIRED)
-set(ARB_PYEXECDIR "${CMAKE_INSTALL_LIBDIR}/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages")
-install(TARGETS pyarb LIBRARY DESTINATION ${ARB_PYEXECDIR})
-
-# Use pip/setuptools to install the Python module.
-# Copy the binary module, the Python files (currently just __init__.py),
-# and a setup.py file into python_mod_path in the build directory.
-# The setup.py uses setuptools to install the contents of python_mod_path.
-# Then call the setup.py file to make the installation.
+# Create the Python module in the build directory.
+# The module contains the dynamic library, __init__.py and VERSION information.
 set(python_mod_path "${CMAKE_CURRENT_BINARY_DIR}/arbor")
-file(MAKE_DIRECTORY "${python_mod_path}")
-install(CODE "file(COPY \"${CMAKE_SOURCE_DIR}/python/setup.py\" DESTINATION \"${CMAKE_CURRENT_BINARY_DIR}\")")
-install(CODE "file(COPY \"${CMAKE_SOURCE_DIR}/python/__init__.py\" DESTINATION \"${python_mod_path}\")")
-install(CODE "file(COPY \"${CMAKE_SOURCE_DIR}/VERSION\" DESTINATION \"${python_mod_path}\")")
-#install(CODE "execute_process(COMMAND python setup.py install --user WORKING_DIRECTORY \"${CMAKE_CURRENT_BINARY_DIR}\")")
-install(CODE "execute_process(COMMAND pip install . --user WORKING_DIRECTORY \"${CMAKE_CURRENT_BINARY_DIR}\")")
-install(TARGETS pyarb LIBRARY DESTINATION "${python_mod_path}")
+set_target_properties(pyarb PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${python_mod_path}")
+file(COPY "${CMAKE_SOURCE_DIR}/python/__init__.py" DESTINATION "${python_mod_path}")
+file(COPY "${CMAKE_SOURCE_DIR}/VERSION" DESTINATION "${python_mod_path}")
+
+# Determine the installation path, according to the Python version.
+# The installation for Python 3.8 would be:
+#  ${ARB_PYTHON_PREFIX}/python3.8/site-packages
+# By default ARB_PYTHON_PREFIX is set to CMAKE_INSTALL_PREFIX, and can be optionally
+# used to install the Python module as a user module, or in a virtualenv.
+find_package(PythonInterp REQUIRED)
+set(arb_pyexecdir "${ARB_PYTHON_PREFIX}/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages")
+install(DIRECTORY ${python_mod_path} DESTINATION ${arb_pyexecdir})
