More robust Python installation (#971)
Improve the Python wrapper generation and installation:
  - install a proper module that can be extended with Python code;
  - give the user more control over where to install the module (e.g. as a user package or in a virtualenv).

During building, the following sub-directory is built in the build director (`CMAKE_BINARY_DIR`)
```
└── python
    └── arbor
            ├── __init__.py
            ├── arbor.so
            └── VERSION
```
This path can then be copied VERBATIM to the target installation path. By default this will be in `CMAKE_INSTALL_PREFIX/lib/python%d.%d/site-packages`.
An additional CMake parameter `ARB_PYTHON_PREFIX` can be used to specify an alternative destination for installing the Python module.

The Python part of the wrapper, implemented in `__init__.py` is currently very limited, only providing `__version__` and `__config__` variables.

The installation guide was updated to cover the Python installation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,13 @@ option(ARB_WITH_ASSERTIONS "enable arb_assert() assertions in code" OFF)
 
 option(ARB_WITH_PYTHON "enable Python front end" OFF)
 
+# Path in which to install the Python module.
+# For Python 3.8, the module would ibe installed in
+#       ${ARB_PYTHON_PREFIX}/python3.8/site-packages
+# To install Arbor eqivalently to `pip install --user` on a linux system:
+#       -DARB_PYTHON_PREFIX="${HOME}/.local/lib""
+set(ARB_PYTHON_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "path for installing Python module for Arbor.")
+
 #----------------------------------------------------------
 # Global CMake configuration
 #----------------------------------------------------------
