Implement lazy range-based merge_view.

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -112,6 +112,7 @@ set(unit_sources
     test_mechcat.cpp
     test_mechinfo.cpp
     test_merge_events.cpp
+    test_merge_view.cpp
     test_morphology.cpp
     test_morph_embedding.cpp
     test_morph_expr.cpp
