--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,4 +11,4 @@ formats: all
 python:
   version: 3.7
   install:
-    - requirements: docs/requirements.txt
+    - requirements: doc/requirements.txt
