Implement std::variant workalike.
* Add util::variant and accessors util::get, util::get_if, util::visit,
mimicking C++17 std::variant, but with some missing functionality noted
in the `util/variant.hpp` header.

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -145,6 +145,7 @@ set(unit_sources
     test_transform.cpp
     test_uninitialized.cpp
     test_unique_any.cpp
+    test_variant.cpp
     test_vector.cpp
     test_version.cpp
 
