--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -3,10 +3,10 @@
 add_library(ext-json INTERFACE)
 target_include_directories(ext-json INTERFACE json/single_include)
 
-# TCLAP command line parsing libary (header-only).
+# tinyopt command line parsing libary (header-only).
 
-add_library(ext-tclap INTERFACE)
-target_include_directories(ext-tclap INTERFACE tclap/include)
+add_library(ext-tinyopt INTERFACE)
+target_include_directories(ext-tinyopt INTERFACE tinyopt/include)
 
 # Random123 (DE Shaw Research) counter-based random number generators (header-only)
 
