--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@
 CMakeFiles
 CMakeCache.txt
 cmake_install.cmake
+/compile_commands.json
 
 # mechanisms generated from .mod files
 mechanisms/multicore/*.hpp
