--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ CMakeCache.txt
 cmake_install.cmake
 /compile_commands.json
 
+# install path used in gitpod
+/install
+
 # mechanisms generated from .mod files
 mechanisms/multicore/*.hpp
 mechanisms/gpu/*.hpp
