Add Gitpod setup (#996)
A support for Gitpod.io, a free automated
dev environment that makes contributing and generally working on GitHub
projects much easier. It allows anyone to start a ready-to-code dev
environment for any branch, issue and pull request with a single click.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@
 CMakeFiles
 CMakeCache.txt
 cmake_install.cmake
+/compile_commands.json
+
+# install path used in gitpod
+/install
 
 # mechanisms generated from .mod files
 mechanisms/multicore/*.hpp
