--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -124,15 +124,15 @@ endif()
 add_library(arbor ${arbor_sources} ${arbor_mechanism_sources})
 add_dependencies(arbor build_all_mods)
 
-if(ARB_WITH_NVCC)
-    target_link_libraries(arbor PRIVATE arbor-private-deps arbor-private-headers)
-    target_link_libraries(arbor PUBLIC arbor-public-deps arbor-public-headers)
-elseif(ARB_WITH_CUDA_CLANG)
+if(ARB_WITH_CUDA_CLANG)
     target_link_libraries(arbor PRIVATE arbor-private-deps arbor-private-headers ${CUDA_LIBRARIES})
     target_link_libraries(arbor PUBLIC arbor-public-deps arbor-public-headers ${CUDA_LIBRARIES})
 elseif(ARB_WITH_HIP_CLANG)
     target_link_libraries(arbor PRIVATE arbor-private-deps arbor-private-headers ${HIP_LIBRARIES})
     target_link_libraries(arbor PUBLIC arbor-public-deps arbor-public-headers ${HIP_LIBRARIES})
+else()
+    target_link_libraries(arbor PRIVATE arbor-private-deps arbor-private-headers)
+    target_link_libraries(arbor PUBLIC arbor-public-deps arbor-public-headers)
 endif()
 
 set_target_properties(arbor PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
