--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = python/pybind11
 	url = https://github.com/pybind/pybind11.git
 [submodule "ci"]
-	path = ci
+	path = ext/ci
 	url = https://gitlab.com/cscs-ci/arbor-sim/arbor-ci.git
