Enrichen configuration information available via version.hpp (#1038)
* Add VECTORIZE configuration feature macro to config, record in python lib.
* Add  ARB_ARCH configuration string as preprocessor define and character string in config and version info respectively.

--- a/arbor/include/CMakeLists.txt
+++ b/arbor/include/CMakeLists.txt
@@ -42,11 +42,14 @@ if(ARB_WITH_PROFILING)
     # define ARB_PROFILE_ENABLED in version.hpp
     list(APPEND arb_features PROFILE)
 endif()
+if(ARB_VECTORIZE)
+    list(APPEND arb_features VECTORIZE)
+endif()
 
 add_custom_command(
     OUTPUT version.hpp-test
     DEPENDS _always_rebuild
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/git-source-id ${FULL_VERSION_STRING} ${arb_features} > version.hpp-test
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/git-source-id ${FULL_VERSION_STRING} ${ARB_ARCH} ${arb_features} > version.hpp-test
 )
 
 set(version_hpp_path arbor/version.hpp)
