--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -60,8 +60,8 @@ target_link_libraries(pyarb PRIVATE arbor pybind11::module)
 if (ARB_WITH_MPI)
     find_python_module(mpi4py)
     if (HAVE_MPI4PY)
-        target_include_directories(pyarb PRIVATE "${PY_MPI4PY}/include")
-        target_compile_definitions(pyarb PRIVATE -DARB_WITH_MPI4PY)
+        target_include_directories(pyarb_obj PRIVATE "${PY_MPI4PY}/include")
+        target_compile_definitions(pyarb_obj PRIVATE -DARB_WITH_MPI4PY)
     endif()
 endif()
 
